samples/_failures_safe/1761321023_25dbd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_642740c2.c: In function ‘main’:
./samples/SAFE/__tmp_642740c2.c:171:9: error: expected expression at end of input
  171 |         if (token.type == TOKEN_EOF)
      |         ^~
./samples/SAFE/__tmp_642740c2.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_642740c2.c:171:9: error: expected declaration or statement at end of input
